# opencad-landsurvey-plugin

./: .gitignore  Cargo.toml  PLUGIN.md  README.md  plugin.toml
.github/workflows/: release.yml  repin-host.yml  repin.yml
crates/landsurvey/: Cargo.toml
crates/landsurvey-cli/: Cargo.toml
crates/landsurvey-cli/src/: main.rs
crates/landsurvey/src/: cogo.rs  dxf.rs  landxml.rs  lib.rs  plan.rs  pnezd.rs  resection.rs  surface.rs  transform.rs  viz.rs
crates/landsurvey/tests/: road_surface_volume_golden.rs  volume_pnezd.rs
crates/landsurvey/tests/fixtures/: road_compressed.landxml  road_surface.landxml
docs/: resection-design.md
docs/examples/: README.md  helmert-pairs-demo.csv  mslab4-helmert-pairs.csv  resection-demo.csv  rts-points-demo.csv  surface-demo.landxml
src/: dispatch.rs  lib.rs  ribbon.rs  state.rs  xdata_persist.rs
