[package]
name = "opencad-landsurvey-plugin"
version = "0.4.6"
edition = "2021"
description = "Land Survey add-on for Open CAD Studio — survey points, PNEZD import, recognized-plan import, and COGO geometry."
license = "GPL-3.0-only"

# A plugin is a C-ABI dynamic library the host loads at runtime.
[lib]
crate-type = ["cdylib"]

[dependencies]
# The stable contract, with the runtime `host` surface (HostApi / BuiltinPlugin).
# Pinned to the v0.8.3 RELEASE TAG commit (the MSI host) so contract types match.
ocs_plugin_api = { git = "https://github.com/HakanSeven12/OpenCADStudio", rev = "60c70ba0239116594faa852f545032b98284337f", features = ["host"] }

# This plugin constructs entities (Point / Line / Arc / Circle / Text) and XDATA
# records, so it names `acadrust` types directly. Must resolve to the *same*
# acadrust as the host (via the patch below) for the loaded library to be
# binary-compatible (approach B: same toolchain + dependency versions).
acadrust = "0.4"

# Layer-C engine — host-free COGO / PNEZD / plan parsing (std + serde only).
landsurvey = { path = "crates/landsurvey" }

# Match the v0.8.3 release's acadrust EXACTLY (from its Cargo.lock) so the
# loaded library is binary-compatible with the MSI host. (As of host v0.8.3 the
# `acadrust` package is sourced from the OpenAEC-Foundation/acadifc fork — the
# in-flight DWG reader work plus Arc copy-on-write entity storage.)
[patch.crates-io]
acadrust = { git = "https://github.com/OpenAEC-Foundation/acadifc", rev = "a7f4741eb9dbcc8f44170eca3a5c85143b6cf432" }

[workspace]
members = ["crates/landsurvey", "crates/landsurvey-cli"]
