[package]
name = "landsurvey"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Headless COGO and PNEZD survey geometry engine for Open CAD Studio"

# Layer-C engine: std + serde only — no iced, acadrust, or host types — so it
# also builds for CLI/WASM. See docs/plugin-architecture.md in the OpenCADStudio
# repo for the three-layer model.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
